--- a/TestResumeDownload/Views/MainWindows/MainWindow.xaml
+++ b/TestResumeDownload/Views/MainWindows/MainWindow.xaml
@@ -6,10 +6,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:windowex="using:WinUIEx"
-    MinWidth="500"
-    MinHeight="500"
 	Title="レジュームダウンロードのテストプログラム"
     PersistenceId="MainWindow"
+    IsMaximizable="False"
+    IsResizable="False"
     mc:Ignorable="d">
 	<Window.SystemBackdrop>
 		<MicaBackdrop/>
