--- a/TestResumeDownload/Views/MainWindows/MainPage.xaml
+++ b/TestResumeDownload/Views/MainWindows/MainPage.xaml
@@ -13,19 +13,20 @@
 		<!-- URL -->
 		<StackPanel Orientation="Horizontal" >
 			<TextBlock Text="URL：" Width="130" HorizontalTextAlignment="Right" VerticalAlignment="Center" />
-			<TextBox Text="{x:Bind ViewModel.Url, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="400" />
+			<TextBox Text="{x:Bind ViewModel.Url, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="400" IsEnabled="{x:Bind ViewModel.IsControlEnabled, Mode=OneWay}" />
 		</StackPanel>
 
 		<!-- ダウンロードフォルダー -->
 		<StackPanel Orientation="Horizontal" Margin="0,10,0,0" >
 			<TextBlock Text="ダウンロードフォルダー：" Width="130" HorizontalTextAlignment="Right" VerticalAlignment="Center" />
-			<TextBox Text="{x:Bind ViewModel.DestFolder, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="400" />
+			<TextBox Text="{x:Bind ViewModel.DestFolder, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="400" IsEnabled="{x:Bind ViewModel.IsControlEnabled, Mode=OneWay}" />
 		</StackPanel>
 
 		<!-- ダウンロードサイズ -->
 		<StackPanel Orientation="Horizontal" Margin="0,10,0,0" >
 			<TextBlock Text="ダウンロードサイズ：" Width="130" HorizontalTextAlignment="Right" VerticalAlignment="Center" />
-			<TextBox Text="{x:Bind ViewModel.DownloadSize, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="50" MinWidth="50" TextAlignment="Right" />
+			<TextBox Text="{x:Bind ViewModel.DownloadSize, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="50" MinWidth="50" TextAlignment="Right" 
+					 IsEnabled="{x:Bind ViewModel.IsControlEnabled, Mode=OneWay}" />
 			<TextBlock Text="MB" VerticalAlignment="Center" Margin="10,0,0,0" />
 		</StackPanel>
 
@@ -36,7 +37,8 @@
 						 RelativePanel.LeftOf="ButtonDownload" RelativePanel.AlignVerticalCenterWithPanel="True" />
 			
 			<!-- ダウンロードボタン -->
-			<Button Name="ButtonDownload" Content="ダウンロード" Style="{StaticResource AccentButtonStyle}" RelativePanel.AlignRightWithPanel="True" />
+			<Button Name="ButtonDownload" Content="ダウンロード" Command="{x:Bind ViewModel.ButtonDownloadClickedCommand}" IsEnabled="{x:Bind ViewModel.IsControlEnabled, Mode=OneWay}" 
+					Style="{StaticResource AccentButtonStyle}" RelativePanel.AlignRightWithPanel="True" />
 
 		</RelativePanel>
 
