--- a/TestResumeDownload/Views/MainWindows/MainPage.xaml
+++ b/TestResumeDownload/Views/MainWindows/MainPage.xaml
@@ -33,8 +33,8 @@
 		<RelativePanel Margin="0,10,0,0" >
 			
 			<!-- プログレスバー -->
-			<ProgressBar RelativePanel.AlignLeftWithPanel="True" Margin="0,0,20,0" 
-						 RelativePanel.LeftOf="ButtonDownload" RelativePanel.AlignVerticalCenterWithPanel="True" />
+			<ProgressBar Minimum="0" Maximum="1" Value="{x:Bind ViewModel.ProgressValue, Mode=OneWay}"
+						 Margin="0,0,20,0" RelativePanel.AlignLeftWithPanel="True" RelativePanel.LeftOf="ButtonDownload" RelativePanel.AlignVerticalCenterWithPanel="True" />
 			
 			<!-- ダウンロードボタン -->
 			<Button Name="ButtonDownload" Content="ダウンロード" Command="{x:Bind ViewModel.ButtonDownloadClickedCommand}" IsEnabled="{x:Bind ViewModel.IsControlEnabled, Mode=OneWay}" 
